--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,7 +10,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="./img/lucy_guan.jpg">
+        <img class="portrait" src="./img/img.jpg">
     </div>
     {{>footer}}
 </body>
